--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="tab_text_3">Calendar</string>
     <string name="_0">0</string>
     <string name="add">add</string>
+    <string name="adding">+</string>
 </resources>
